# dikw-core

./: .codecov.yml  .env.example  .gitignore  .pat-smoke-marker  .pre-commit-config.yaml  .worktreeinclude  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  GUIDE_FOR_AGENTS.md  INSTALL_FOR_AGENTS.md  README.md  SECURITY.md  pyproject.toml
.claude/skills/dikw-core-delivery-workflow/: SKILL.md
.claude/skills/dikw-core-fresh-review/: SKILL.md
.claude/skills/dikw-core-verify/: SKILL.md
.claude/skills/dikw-core-verify-synth/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  eval-gate.yml  release.yml  reusable-ci.yml  trivy.yml
docs/: architecture.md  converters.md  deployment-docker.md  design.md  eval-plan.md  getting-started.md  lint-orphan-governance.md  observability.md  providers.md  releasing.md  server.md  verification-rubric.md
docs/adr/: 0001-provenance-as-separate-edge.md  0002-wisdom-as-first-class-documents.md  0003-configurable-knowledge-taxonomy.md  0004-drop-generated-index-and-log.md  0005-filesystem-source-of-truth-reconciliation-and-deletion.md  0006-reranker-deterministic-scoping.md
docs/observability/: README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
docs/plans/: provenance-edge.md
evals/: BASELINES.md  README.md
evals/baselines/: README.md
evals/datasets/mvp/: dataset.yaml  queries.yaml
evals/experiments/embed-qwen-vs-bgem3/: README.md  bge-m3.json  comparison.json  qwen3-0.6b.json  spec.yaml
evals/experiments/enriched-synth-prompt/: baseline_runs.json  intervention_runs.json  result.json
evals/experiments/llm-minimax-vs-deepseek/: README.md  comparison.json  deepseek-v4-pro.json  minimax-m3.json  spec.yaml
evals/experiments/phase2-slug-priority/: baseline_runs.json  intervention_runs.json  result.json
evals/experiments/synth-prompt-pr1-codex/: baseline_runs.json  intervention_runs.json  result.json
evals/experiments/synth-prompt-pr1-minimax/: baseline_runs.json  intervention_runs.json  result.json
evals/experiments/synth-prompt-pr2-codex/: baseline_runs.json  intervention_runs.json  result.json
evals/experiments/synth-prompt-pr2-minimax/: baseline_runs.json  intervention_runs.json  result.json
evals/experiments/synth-sp-restructure-codex/: baseline_runs.json  intervention_runs.json  result.json
evals/tools/: ab_experiment.py  compare_models.py  probe_multimodal.py  run_phase15_from_snapshot.py  sweep_rrf.py
examples/docker/: .env.example  Dockerfile  README.md  docker-compose.yml
scripts/: pr2_baseline_run.py  rename_wiki.ps1  rename_wiki_docs.ps1
src/dikw_core/: api.py  api_core.py  api_delete.py  api_graph.py  api_health.py  api_ingest.py  api_lint.py  api_pages.py  api_path_safety.py  api_retrieve.py  api_synth.py  api_types.py  api_wisdom.py  auth_cli.py  cli.py  config.py  logging.py  md_inspect.py  schemas.py  telemetry.py
src/dikw_core/client/: __init__.py  baseline.py  cli_app.py  config.py  importer.py  progress.py  serve_and_run.py  task_follow.py  transport.py
src/dikw_core/domains/: _atomic.py  trash.py
src/dikw_core/eval/: dataset.py  fake_embedder.py  judge.py  metrics.py  runner.py
src/dikw_core/prompts/: __init__.py  _contract.py  eval_judge_atomicity.md  eval_judge_category.md  eval_judge_entailment.md  eval_judge_synth.md  eval_judge_wikilink.md  lint_fix_broken_wikilink_grounded.md  lint_fix_broken_wikilink_grounded_system.md  lint_fix_broken_wikilink_stub.md  lint_fix_orphan_merge.md  lint_fix_orphan_merge_system.md  synthesize.md  synthesize_system.md
tests/: cli_command_tree.golden.txt  conftest.py  fakes.py  test_ab_experiment.py  test_api_assets.py  test_api_graph.py  test_api_health.py  test_api_links.py  test_api_max_tokens_threading.py  test_api_pages.py  test_api_provenance.py  test_atomic_write.py  test_auth_cli.py  test_base_upgrade_required.py  test_check_baselines.py  test_check_command.py  test_check_doc_refs.py  test_check_providers_smoke.py  test_cli.py  test_cli_surface.py  test_codex_auth.py  test_codex_auth_device_flow.py  test_codex_auth_migration.py  test_codex_auth_refresh.py  test_compare_models.py  test_config.py  test_delete_page.py  test_domains_layout.py  test_e2e_verify_docker.py  test_e2e_verify_local.py  test_e2e_verify_unit.py  test_embed_multimodal.py  test_embed_perf.py  test_embed_resilient.py  test_embed_streaming.py  test_engine_op_spans.py  test_eval_cli.py  test_eval_dataset.py  test_eval_judge.py  test_eval_loud_skip.py  (+83 more)
tests/client/: test_baseline.py  test_cli_delete.py  test_cli_e2e.py  test_cli_eval_baseline.py  test_cli_graph.py  test_cli_lint_fix.py  test_cli_op_async.py  test_cli_tasks.py  test_cli_tasks_list.py  test_cli_wisdom_write.py  test_import.py  test_import_cli.py  test_import_with_converter.py  test_progress.py  test_serve_and_run.py  test_version_skew.py
tests/fixtures/: live-deepseek-gitee-bgem3.dikw.yml  live-minimax-gitee.dikw.yml
tests/server/: _import_helpers.py  conftest.py  test_delete_route.py  test_eval_op.py  test_event_tape_waiter.py  test_health_route.py  test_import.py  test_import_packages.py  test_ingest_task.py  test_lint_fix_routes.py  test_query_route_removed.py  test_query_stream.py  test_retrieve_stream.py  test_route_write_lock_wiring.py  test_routes_assets.py  test_routes_graph.py  test_routes_page_links.py  test_routes_page_provenance.py  test_routes_pages.py  test_routes_sync.py  test_routes_tasks_list.py  test_runner_write_lock.py  test_runtime.py  test_synth_distill_tasks.py  test_synth_tasks.py  test_task_manager.py  test_task_store_contract.py  test_telemetry_tracing.py  test_telemetry_wiring.py  test_wisdom_write_route.py
tools/: check.py  check_baselines.py  check_doc_refs.py  e2e_verify.py  loop_metrics.py
(+81 files in other folders)
