[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dikw-core"
version = "0.5.2"
description = "AI-native knowledge engine across the DIKW pyramid (Data → Information → Knowledge → Wisdom)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "dikw-core contributors" }]
keywords = ["knowledge-base", "rag", "llm", "wiki", "dikw", "obsidian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "pydantic>=2.13",
    "pyyaml>=6.0",
    "typer>=0.24",
    "rich>=15.0",
    "markdown-it-py>=4.0",
    "python-frontmatter>=1.1",
    "sqlite-vec>=0.1.9",
    "anthropic>=0.96",
    "openai>=2.32",
    "httpx>=0.28",
    # client/server architecture (Phase 2+ of the in-process → HTTP migration).
    # Adding these in Phase 0 so subsequent PRs can land server/ and client/
    # modules without touching the dependency surface again.
    "fastapi>=0.136",
    "uvicorn[standard]>=0.44",
    "python-multipart>=0.0.26",
]

[project.optional-dependencies]
postgres = ["psycopg[binary,pool]>=3.3", "pgvector>=0.4"]
# CJK segmentation for the BM25 leg. Without it, SQLite FTS5's default
# unicode61 tokenizer treats every Chinese character as a separate
# token, which collapses BM25 to single-char IDF (observed on CMTEB
# T2Retrieval: nDCG@10 = 0.03). Install with `uv sync --extra cjk`
# or `uv pip install 'dikw-core[cjk]'` before flipping
# `retrieval.cjk_tokenizer: jieba` in dikw.yml.
cjk = ["jieba>=0.42"]
# OpenTelemetry observability. Optional so the default install stays
# dependency-light (alpha, minimal-deps philosophy): without it, the
# ``telemetry`` module degrades to zero-overhead no-ops. Install with
# `uv sync --extra otel` (CI installs it via `uv sync --all-extras`) or
# `uv pip install 'dikw-core[otel]'`, then enable the `telemetry:` section
# in dikw.yml (or set OTEL_* env vars) to export traces/metrics/logs to any
# OTLP backend (Jaeger/Tempo, Prometheus, Grafana, Datadog, …). The
# instrumentation packages track the 0.NNbM line (separate from the stable
# 1.NN API/SDK); OTLP/HTTP avoids the heavy grpcio wheel.
otel = [
    "opentelemetry-api>=1.30",
    "opentelemetry-sdk>=1.30",
    "opentelemetry-exporter-otlp-proto-http>=1.30",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-instrumentation-httpx>=0.51b0",
    "opentelemetry-instrumentation-logging>=0.51b0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=5.0",
    "pytest-dotenv>=0.5",
    "ruff>=0.15",
    "mypy>=1.20",
    "types-PyYAML",
    # Local git pre-commit hooks (ruff + mypy) mirroring the CI floor. Wire
    # them once with `uv run pre-commit install`; config in .pre-commit-config.yaml.
    "pre-commit>=4.0",
    # jieba is required to run tokenize.py's tests regardless of the
    # project extras the user picked, so it lives in dev-deps as well.
    "jieba>=0.42",
]

[project.scripts]
dikw = "dikw_core.cli:app"

[project.urls]
Homepage = "https://github.com/OpenDIKW/dikw-core"
Repository = "https://github.com/OpenDIKW/dikw-core"

[tool.hatch.build.targets.wheel]
packages = ["src/dikw_core"]

[tool.hatch.build.targets.wheel.force-include]
# Packaged eval datasets. Top-level `evals/datasets/` is the canonical source
# of truth; this mapping copies it into the wheel so `dikw eval` works after
# `pip install` without requiring users to clone the repo.
#
# `src/dikw_core/{storage/migrations,prompts}` are NOT listed here even
# though they ship non-.py assets (schema.sql, prompt .md) — they live
# inside the package tree, so `packages = ["src/dikw_core"]` already
# picks them up via hatchling's default file discovery. Adding them
# here used to produce duplicate zipfile entries that PyPI rejects
# with "Duplicate filename in local headers" on `twine upload`.
"evals/datasets" = "dikw_core/eval/datasets"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["E501"]  # line length is handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM117"]
# FastAPI's idiomatic ``Query(default=...)`` and ``Depends(...)`` in
# parameter defaults is exactly the B008 anti-pattern, but here it's
# the framework's contract — silence the rule scope-locally rather
# than refactoring every endpoint.
"src/dikw_core/server/routes_*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["dikw_core"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "sqlite_vec.*", "frontmatter.*", "markdown_it.*", "pgvector.*", "jieba.*",
]
ignore_missing_imports = true

# The opentelemetry-instrumentation-* packages ship incomplete py.typed
# coverage; the stable opentelemetry-api / -sdk do not need this. Scoped to
# the instrumentation namespace so real type errors in our own otel use still
# surface.
[[tool.mypy.overrides]]
module = ["opentelemetry.instrumentation.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "perf: wallclock-budget tests (skip with `-m 'not perf'` if CI is noisy)",
    "slow: tests that spawn real subprocesses or wait on network bind (skip with `-m 'not slow'` for the fast inner loop)",
    "requires_embedding_key: opts the test out of the autouse fixture that clears DIKW_EMBEDDING_API_KEY — live-API smoke tests use this to keep their real key visible at test time",
]
